--- a/concepts/product/test/quality-evolutions.mdx
+++ b/concepts/product/test/quality-evolutions.mdx
@@ -124,7 +124,7 @@ Here are examples of the content and its creation-document structure:
 
 Quality tests have a specific structure designed to facilitate effective evaluation:
 
-<ResponseField name="instance_id" type="Integer" required>
+<ResponseField name="instance_id" type="Number" required>
   A unique identifier for the test instance.
 </ResponseField>
 
