--- a/concepts/product/test/red-teaming-threats.mdx
+++ b/concepts/product/test/red-teaming-threats.mdx
@@ -146,7 +146,7 @@ Here are examples of the content and its creation-document structure:
 
 Red teaming tests have a specific structure focused on providing challenging inputs:
 
-<ResponseField name="instance_id" type="Integer" required>
+<ResponseField name="instance_id" type="Number" required>
   A unique identifier for the test instance.
 </ResponseField>
 
