--- a/concepts/product.mdx
+++ b/concepts/product.mdx
@@ -16,7 +16,7 @@ A product in Galtea represents a functionality or service that you want to evalu
 
 <Note>Even if your organization has a single public-facing product (like a website or dashboard for all user interactions), you should define separate Galtea products for each distinct functionality you want to evaluate.</Note>
 
-You can **create**, view and manage your products on the [Galtea dashboard](https://platform.galtea.ai/) but they can still be viewed and managed programmatically using the [Galtea SDK](/sdk/api/product/service).
+You can **create**, view and manage your products on the [Galtea dashboard](https://platform.galtea.ai/). Products can also be viewed and managed programmatically using the [Galtea SDK](/sdk/api/product/service).
 
 ## Related Concepts
 
@@ -30,7 +30,9 @@ A product in Galtea is associated with:
 
 ## SDK Integration
 
-**Products are created and managed through the Galtea platform.** The SDK allows you to list existing products, retrieve specific products by their ID or name, and delete products. See the [Product Service API documentation](/sdk/api/product/service) for more details.
+The SDK allows you to list existing products, retrieve specific products by their ID or name, and delete products. See the [Product Service API documentation](/sdk/api/product/service) for more details.
+
+<Note>Note that product creation is handled through the Galtea platform.</Note>
 
 <SDKProductServiceCard />
 
