--- a/sdk/api/evaluation-task/create-from-production.mdx
+++ b/sdk/api/evaluation-task/create-from-production.mdx
@@ -53,7 +53,7 @@ evaluation_tasks = galtea.evaluation_tasks.create_from_production(
   The actual output produced by the product.
 </ResponseField>
 <ResponseField name="context" type="string" optional>
-  The context that was used to generate the actual output.
+  Additional data or broader conversational context that was used and was relevant when the `actual_output` was generated in production.
 </ResponseField>
 <ResponseField name="retrieval_context" type="string" optional>
   The context retrieved by your RAG system that was used to generate the actual output.
