--- a/sdk/integrations/github-actions.mdx
+++ b/sdk/integrations/github-actions.mdx
@@ -93,16 +93,23 @@ version = galtea.versions.create(
     name=f"v1.X-{os.getenv('GITHUB_SHA')}",
     product_id=PRODUCT_ID
 )
-test = galtea.tests.get_by_name(TEST_NAME)
+test = galtea.tests.get_by_name(product_id=PRODUCT_ID, test_name=TEST_NAME)
 test_cases = galtea.test_cases.list(test.id)
-metrics = [
-    galtea.metrics.get_by_name(GALTEA_ACCURACY_METRIC_NAME),
-    galtea.metrics.get(GALTEA_COMPLETENESS_METRIC_NAME),
+
+metric_names = [
+    GALTEA_ACCURACY_METRIC_NAME,
+    GALTEA_COMPLETENESS_METRIC_NAME
 ]
+
 evaluation = galtea.evaluations.create(test_id=test.id, version_id=version.id)
+
+# Placeholder for where the model's answer would be generated
+# In a real scenario, this would involve calling your model with test_case.input, etc.
+model_answer = "This is a placeholder model answer."
+
 for test_case in test_cases:
     galtea.evaluation_tasks.create(
-      metrics=metrics,
+      metrics=metric_names,
       evaluation_id=evaluation.id,
       actual_output=model_answer,
       test_case_id=test_case.id
