--- a/sdk/usage.mdx
+++ b/sdk/usage.mdx
@@ -11,7 +11,7 @@ Below are some examples of how to use the SDK to interact with the Galtea platfo
 ```python
 from galtea import Galtea
 
-galtea = new Galtea(api_key="<YOUR_GALTEA_PLATFORM_API_KEY>")
+galtea = Galtea(api_key="<YOUR_GALTEA_PLATFORM_API_KEY>")
 ```
 
 <Note>
