--- a/introduction.mdx
+++ b/introduction.mdx
@@ -31,7 +31,7 @@ The typical workflow in Galtea follows these steps:
   <Step title="Create Version">Define a new [Version](/concepts/product/version) of your [Product](/concepts/product) with specific parameters</Step>
   <Step title="Create Test">Create a [Test](/concepts/product/test) with [Test Cases](/concepts/product/test/case) to evaluate your [Product](/concepts/product)</Step>
   <Step title="Define an Evaluation">Establish an [Evaluation](/concepts/product/evaluation) that links the [Test](/concepts/product/test) and the specific [Version](/concepts/product/version) to be assessed</Step>
-  <Step title="Run Evaluations">Run each [Test Case](/concepts/product/test/case) against a [Version](/concepts/product/version) with [Evaluation Tasks](/concepts/product/evaluation/task) to evaluate a specific [Metric](/concepts/metric-type)</Step>
+  <Step title="Run Evaluations">Run each [Test Case](/concepts/product/test/case) against a [Version](/concepts/product/version) with [Evaluation Tasks](/concepts/product/evaluation/task) to evaluate a specific [Metric Type](/concepts/metric-type)</Step>
   <Step title="Analyze Results">Review and compare the performance of different [Versions](/concepts/product/version) using the built-in analytics tools</Step>
   <Step title="Iterate">Develop a new [Version](/concepts/product/version) of your [Product](/concepts/product) and repeat the process to compare the performance of the new [Version](/concepts/product/version) with the previous ones</Step>
 </Steps>
